# zeabus-elec

./: .gitmodules  CMakeLists.txt  README.md  const_dump.yaml  contributors.txt  ftd2xx.h  ftdi_impl.cpp  ftdi_impl.h  ftdi_impl.hpp  package.xml  zblib.c  zblib.h  zeabus.bck  zeabus.dcm  zeabus.lib
Circuit/BLDC-ESC/: bldc-esc.pro  bldc-esc.sch
Circuit/Backplane/: Backplane-cache.lib  Backplane.kicad_pcb  Backplane.kicad_pcb-bak  Backplane.net  Backplane.pro  Backplane.sch  _autosave-Backplane.kicad_pcb  conn_jumper.dcm  conn_jumper.lib  fp-lib-table  noname.kicad_pcb1.kicad_pcb
Circuit/Backplane/Plot/: Backplane-B.Cu.gbl  Backplane-B.Mask.gbs  Backplane-B.SilkS.gbo  Backplane-F.Mask.gts  Backplane-F.SilkS.gto
Circuit/Backplane/plot/: Backplane-B.Cu.gbl  Backplane-B.Cu.gbr  Backplane-B.Paste.gbp  Backplane-B.SilkS.gbo  Backplane-B.SilkS.gbr  Backplane-Edge.Cuts.gbr  Backplane-Edge.Cuts.gm1  Backplane-F.Cu.gbr  Backplane-F.Cu.gtl  Backplane-F.Paste.gtp  Backplane-F.SilkS.gbr  Backplane-F.SilkS.gto  Backplane-NPTH.drl  Backplane.drl
Circuit/Battery-Rail/: Battery-Rail.pro
Circuit/Battery-Rail/Balancer-Rail/: Balancer-Rail.kicad_pcb  Balancer-Rail.pro
Circuit/Battery-Rail/Power-Rail/: Power-Rail-cache.lib  Power-Rail.kicad_pcb  Power-Rail.kicad_pcb-bak  Power-Rail.net  Power-Rail.pro  Power-Rail.sch  fp-lib-table
Circuit/Board-drive/: board-drive-cache.lib  board-drive.kicad_pcb  board-drive.net  board-drive.pro
Circuit/Board-drive/Plot/: board-drive-B.Mask.gbs  board-drive-Margin.gbr  board-drive-NPTH.drl
Circuit/Kicad-Libraries/: README.md  zeabus.bak  zeabus.bck  zeabus.dcm  zeabus.lib
Circuit/Kicad-Libraries/zeabus.pretty/: 5-103908-1.kicad_mod  5-103908-2.kicad_mod  5-103908-3.kicad_mod  70543-0002.kicad_mod  70553-0002.kicad_mod  90136-1202.kicad_mod  HTSOP-J8.kicad_mod  (+39 more)
Circuit/PCIe_pinout/: PCIe_pinout-cache.lib  PCIe_pinout.pro  PCIe_pinout.sch
Circuit/PWM_Isolator/: PWM_Isolator-cache.lib  PWM_Isolator.kicad_pcb  PWM_Isolator.net  PWM_Isolator.pro  PWM_Isolator.sch
Circuit/Peripheral-bridge/: peripheral-birdge.sch  peripheral_controller.sch
Circuit/Peripheral-bridge-v2/: peripheral-birdge-v2.kicad_pcb  peripheral-birdge-v2.sch
Circuit/Peripheral-bridge-v3/: fp-lib-table  peripheral-birdge-v3.html  peripheral-birdge-v3.net  peripheral-birdge-v3.pro  peripheral-birdge-v3.sch
Circuit/Peripheral_bridge/: Comm_Bridge.kicad_pcb  Comm_Bridge.net  Comm_Bridge.pro  Comm_Bridge.sch  README.md
Circuit/Power_dist/: Current_Monitor.sch  Lamp_Switch.sch  Lamp_switch.sch  Power-Controller.pro  Power-Controller.sch  Power-Volt-Converter.sch  Power-Volt-Convertor.sch  Power_12V.sch  Power_5V.sch  Power_Aggregator.pro  Power_Aggregator.sch  Power_Distributor-cache.lib  Power_Distributor.CSV  Power_Distributor.html  Power_Distributor.kicad_pcb  Power_Distributor.kicad_pcb-bak  Power_Distributor.net  Power_Distributor.pro  Power_Distributor.sch  Power_Distributor.xml  Power_Switch_5V.pro  Power_Switch_5V.sch  Power_Switch_VBatt.sch  Power_Vbatt_SW.pro  Power_Vbatt_SW.sch  Power_switch_5V.sch  Power_switch_5V_SW.sch  README.md  Soft_Start_Circuit.sch  Thruster_Switch.sch  _autosave-Power_Distributor.kicad_pcb  _saved_Power-Volt-Converter.sch  component-alignment.kicad_pcb  fp-lib-table
Circuit/Switch_board/: Switch_board-cache.lib  Switch_board.kicad_pcb  Switch_board.kicad_pcb-bak  Switch_board.net  Switch_board.pro  Switch_board.sch  fp-lib-table
Circuit/board-drive/: board-drive-cache.lib  board-drive-rescue.lib  board-drive.kicad_pcb  board-drive.kicad_pcb-bak  board-drive.net  board-drive.pro  board-drive.sch
Circuit/peripheral-bridge-v2/: peripheral-birdge-v2.csv  peripheral-birdge-v2.kicad_pcb  peripheral-birdge-v2.net  peripheral-birdge-v2.pro  peripheral-birdge-v2.sch
Circuit/peripheral-bridge-v3/: peripheral-birdge-v3-cache.lib  peripheral-birdge-v3.CSV  peripheral-birdge-v3.dsn  peripheral-birdge-v3.kicad_pcb  peripheral-birdge-v3.kicad_pcb-bak  peripheral-birdge-v3.net  peripheral-birdge-v3.pro  peripheral-birdge-v3.sch  peripheral-birdge-v3.xml
Code/Coltroller/: CMakeLists.txt  plugin.xml
Code/lib/: README.md
Code/zeabus_elec_ftdi_lib/: README.md  ftdi_impl.cpp  ftdi_impl.h
Code/zeabus_elec_library/: ftdi_impl.hpp
Code/zeabus_elec_ros_hardware_interface/: CMakeLists.txt  package.xml
Code/zeabus_elec_ros_hardware_interface/launch/: hardware_interface.launch  zeabus_elec_ros_hardware_interface.launch
Code/zeabus_elec_ros_hardware_interface/src/: zeabus_elec_ros_hardware_interface.cpp
Code/zeabus_elec_ros_imu_3dm_gx4_45/: LICENSE  package.xml
Code/zeabus_elec_ros_peripheral_bridge/: CMakeLists.txt  README.md  package.xml
Code/zeabus_elec_ros_peripheral_bridge/launch/: peripheral_bridge.launch
Code/zeabus_elec_ros_peripheral_bridge/msg/: barometer.msg  comm_data.msg  ios_state.msg  solenoid_sw.msg
Code/zeabus_elec_ros_peripheral_bridge/src/: zeabus_elec_ros_peripheral_bridge.cpp
Code/zeabus_elec_ros_peripheral_bridge/srv/: senddata.srv  solenoid.srv  solenoid_sw.srv
Code/zeabus_elec_ros_power_dist/: CMakeLists.txt  README.md  package.xml
cfg/: PIDConstant.cfg
include/: mip.h
include/zeabus_controller/: handle.h  zeabus_hardware_interface.h
launch/: power_dist.launch
modprobe-blacklist/: blacklist-zeabus.conf
msg/: barometer.msg  power_dist.msg
script/: joy_test.py  main.py
src/: 3dm_gx4.cpp  Controller_Mode.cpp  PID_constant_helper.h  zeabus_elec_ros_imu_3dm_gx4.cpp  zeabus_elec_ros_peripheral_bridge.cpp  zeabus_elec_ros_power_dist.cpp
srv/: barometer.srv  power_dist.srv  receivedata.srv
zeabus.pretty/: 1Pin-TP.kicad_mod  90136-2013.kicad_mod  ADM708_R_8.kicad_mod  ADSP-21489-177.kicad_mod  Button-EVQ.kicad_mod  CC6-xF-E.kicad_mod  CRA06S.kicad_mod  Connector_Molex_PicoBlade_53048-0610.kicad_mod  D2PAK-7.kicad_mod  DFN-8-1EP_2.5x2.5mm_Pitch0.5mm.kicad_mod  EDGE-2x6.kicad_mod  L-SDR0503.kicad_mod  Narrow-SOIC-16.kicad_mod  Oscillator-TCXO.kicad_mod  RN-CRA06S.kicad_mod  SO16_4.4x10.3mm_Pitch1.27mm.kicad_mod  SOIC-6.kicad_mod  Solder_Jumper2.kicad_mod  TSOP-5.kicad_mod  UWE-xxxx.kicad_mod  XT90.kicad_mod
(+110 files in other folders)
