<package format="2">
  <name>controller</name>
  <version>0.0.1</version>
  <description>controller</description>
  <maintainer email="samoooop@gmail.com">Trairat Punyawatthananukool</maintainer>
  <license>BSD</license>
  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>
  <!-- Dependencies needed to compile and execute this package. -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>tf</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>roslib</depend>
  <depend>message_generation</depend>
</package>
