<?xml version="1.0"?>
<package>

  <name>zeabus_elec_ros_hardware_interface</name>
  <version>0.0.0</version>
  <description>The zeabus_elec_ros_hardware_interface package</description>

  <maintainer email="natchanan.th@ku.th">Natchanan Thongtem</maintainer>

  <license>TODO</license>

  <author>Natchanan Thongtem</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>zeabus_elec_ros_peripheral_bridge</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>zeabus_elec_ros_peripheral_bridge</run_depend>

</package>
